--- a/onlineCourse/src/app/assignment/assignment.component.html
+++ b/onlineCourse/src/app/assignment/assignment.component.html
@@ -1,9 +1,17 @@
 <h1>Assignment</h1>
 
+<h2>Assignments</h2>
 <ul>
   <li *ngFor="let assignment of assignmentList">
-    Hi {{assignment.title}}
+    {{assignment.title}}
   </li>
 </ul>
 
-<p>End</p>
+<h2>Students</h2>
+<ul>
+  <li *ngFor="let student of studentList">
+    {{student.name}}
+  </li>
+</ul>
+
+<p>{{potato}}</p>
