--- a/onlineCourse/src/app/app.component.html
+++ b/onlineCourse/src/app/app.component.html
@@ -1,1 +1,6 @@
-<app-assignment></app-assignment>
+<nav>
+  <a routerLink="/assignmentList">Assignment List</a>
+  <a routerLink="/assignment">Assignment</a>
+  <a routerLink="/create">Create</a>
+</nav>
+<router-outlet></router-outlet>
