assignment list working

--- a/onlineCourse/src/app/assignment-list/assignment-list.component.html
+++ b/onlineCourse/src/app/assignment-list/assignment-list.component.html
@@ -1,1 +1,8 @@
-<p>assignment-list works!</p>
+<h1>Assignments</h1>
+
+
+<div *ngFor="let assignment of assignmentList">
+  <a routerLink="/assignment/{{assignment.id}}">
+      {{assignment.title}}
+    </a>
+</div>
