--- a/onlineCourse/src/app/create/create.component.html
+++ b/onlineCourse/src/app/create/create.component.html
@@ -8,24 +8,38 @@
 <br/>
 <br/>
 
-<div *ngFor="let question of questionList.questions">
-  <label id="example-radio-group-label">{{question.question}}</label>
+<div class="dotted" *ngFor="let question of questionList.questions">
+  <fieldset [disabled]=true style="border:none">
+    <label id="example-radio-group-label">{{question.question}}</label>
+    <mat-radio-group
+    aria-labelledby="example-radio-group-label"
+    class="example-radio-group"
+    [(ngModel)]="question.answer">
+      <mat-radio-button class="example-radio-button" *ngFor="let choice of question.choices" [value]="choice">
+        {{choice}}
+      </mat-radio-button>
+    </mat-radio-group>
+  </fieldset>
+</div>
+
+<div class="addBox">
+  <p>Question: <input [(ngModel)]="questionObj.question" /></p>
+  <!-- <p>Correct Answer: <input [(ngModel)]="questionObj.correctAnswer" /></p> -->
+  <p>Select the correct answer</p>
   <mat-radio-group
   aria-labelledby="example-radio-group-label"
   class="example-radio-group"
-  [(ngModel)]="question.answer">
-    <mat-radio-button class="example-radio-button" *ngFor="let choice of question.choices" [value]="choice">
-      {{choice}}
-    </mat-radio-button>
+  [(ngModel)]="questionObj.correctAnswer">
+    <mat-radio-button [value]="choice1">Choice 1: <input [(ngModel)]="choice1" /></mat-radio-button>
+    <mat-radio-button [value]="choice2">Choice 2: <input [(ngModel)]="choice2" /></mat-radio-button>
+    <mat-radio-button [value]="choice3">Choice 3: <input [(ngModel)]="choice3" /></mat-radio-button>
+    <mat-radio-button [value]="choice4">Choice 4: <input [(ngModel)]="choice4" /></mat-radio-button>
   </mat-radio-group>
+
+  <button (click)="add()" id="add">Add</button>
 </div>
 
-<p>Question: <input [(ngModel)]="questionObj.question" /></p>
-<p>Correct Answer: <input [(ngModel)]="questionObj.correctAnswer" /></p>
-<p>Choice 1: <input [(ngModel)]="choice1" /></p>
-<p>Choice 2: <input [(ngModel)]="choice2" /></p>
-<p>Choice 3: <input [(ngModel)]="choice3" /></p>
-<p>Choice 4: <input [(ngModel)]="choice4" /></p>
+<br/>
+<br/>
 
-
-<button (click)="add()" id="add">Add</button>
+<button (click)="createAssignment()" id="create">Create</button>
