--- a/onlineCourse/src/app/create/create.component.sass
+++ b/onlineCourse/src/app/create/create.component.sass
@@ -9,3 +9,11 @@ h1
 
 .example-radio-button
   margin: 5px
+
+.dotted
+  border: dotted thick purple
+  border-radius: 5px
+
+.addBox
+  background-color: #dde
+  padding: 20px
