results page works

--- a/onlineCourse/src/app/app.component.html
+++ b/onlineCourse/src/app/app.component.html
@@ -1,5 +1,6 @@
 <nav>
   <a routerLink="/assignmentList">Assignment List</a>
   <a routerLink="/create">Create</a>
+  <a routerLink="/resultsList">Results List</a>
 </nav>
 <router-outlet></router-outlet>
