--- a/onlineCourse/src/styles.sass
+++ b/onlineCourse/src/styles.sass
@@ -1,1 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
+body
+  margin: 0px
+
+.mainBody
+  padding: 30px
+  font: 400 14px/20px Roboto, "Helvetica Neue", sans-serif
