--- a/onlineCourse/src/app/create/create.component.html
+++ b/onlineCourse/src/app/create/create.component.html
@@ -1,14 +1,33 @@
 <h1>Create Assignment</h1>
 
-<p>Title: <input [(ngModel)]="questionList.title" /></p>
-<p>Description: <input [(ngModel)]="questionList.description" /></p>
-<p>Instruction: <input [(ngModel)]="questionList.instruction" /></p>
-<p>Video Link: <input [(ngModel)]="questionList.videoLink" /></p>
+<div class="whole">
+  <div class="half">
+    <p>Title: <input [(ngModel)]="questionList.title" /></p>
+    <p>Description: <input [(ngModel)]="questionList.description" /></p>
+    <p>Instruction: <input [(ngModel)]="questionList.instruction" /></p>
+    <p>Video Link: <input [(ngModel)]="questionList.videoLink" /></p>
+  </div>
+  <div class="addBox half">
+    <p>Question: <input [(ngModel)]="questionObj.question" /></p>
+    <!-- <p>Correct Answer: <input [(ngModel)]="questionObj.correctAnswer" /></p> -->
+    <p>Select the correct answer</p>
+    <mat-radio-group
+    aria-labelledby="example-radio-group-label"
+    class="example-radio-group"
+    [(ngModel)]="questionObj.correctAnswer">
+      <mat-radio-button [value]="choice1">Choice 1: <input [(ngModel)]="choice1" /></mat-radio-button>
+      <mat-radio-button [value]="choice2">Choice 2: <input [(ngModel)]="choice2" /></mat-radio-button>
+      <mat-radio-button [value]="choice3">Choice 3: <input [(ngModel)]="choice3" /></mat-radio-button>
+      <mat-radio-button [value]="choice4">Choice 4: <input [(ngModel)]="choice4" /></mat-radio-button>
+    </mat-radio-group>
 
+    <button (click)="add()" id="add">Add</button>
+  </div>
+</div>
 <br/>
 <br/>
 
-<div class="dotted" *ngFor="let question of questionList.questions">
+<div class="dotted whole" *ngFor="let question of questionList.questions">
   <fieldset [disabled]=true style="border:none">
     <label id="example-radio-group-label">{{question.question}}</label>
     <mat-radio-group
@@ -22,22 +41,7 @@
   </fieldset>
 </div>
 
-<div class="addBox">
-  <p>Question: <input [(ngModel)]="questionObj.question" /></p>
-  <!-- <p>Correct Answer: <input [(ngModel)]="questionObj.correctAnswer" /></p> -->
-  <p>Select the correct answer</p>
-  <mat-radio-group
-  aria-labelledby="example-radio-group-label"
-  class="example-radio-group"
-  [(ngModel)]="questionObj.correctAnswer">
-    <mat-radio-button [value]="choice1">Choice 1: <input [(ngModel)]="choice1" /></mat-radio-button>
-    <mat-radio-button [value]="choice2">Choice 2: <input [(ngModel)]="choice2" /></mat-radio-button>
-    <mat-radio-button [value]="choice3">Choice 3: <input [(ngModel)]="choice3" /></mat-radio-button>
-    <mat-radio-button [value]="choice4">Choice 4: <input [(ngModel)]="choice4" /></mat-radio-button>
-  </mat-radio-group>
 
-  <button (click)="add()" id="add">Add</button>
-</div>
 
 <br/>
 <br/>
